crates/xlate/tests/snapshots/golden_matrix__chained__responses_to_chat__gpt4o.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-4o",
  "messages": [
    {
      "role": "user",
      "content": "And what about Boston?"
    }
  ],
  "temperature": 0.5,
  "max_completion_tokens": 512,
  "store": true
}
--- headers ---
upstream_streams: false
--- degraded ---
